@@ -240,10 +240,16 @@ void session_set_timeout(Session *session, guint interval)
 		g_source_remove(session->timeout_tag);
 
 	session->timeout_interval = interval;
-	if (interval > 0)
+	if (interval > 0) {
+#if GLIB_CHECK_VERSION(2,14,0)
+		if (interval % 1000 == 0)
+			session->timeout_tag =
+				g_timeout_add_seconds(interval/1000, session_timeout_cb, session);
+		else
+#endif
 		session->timeout_tag =
 			g_timeout_add(interval, session_timeout_cb, session);
-	else
+	} else
 		session->timeout_tag = 0;
 }
 
